<?xml version="1.0"?>
<package>
  <name>heron_worlds</name>
  <version>0.2.3</version>
  <description>World creator package for Heron simulator</description>

  <maintainer email="mpurvis@clearpathrobotics.com">Mike Purvis</maintainer>
  <author email="gstoppi@clearpathrobotics.com">Guy Stoppi</author>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <run_depend>gazebo_ros</run_depend>

  <export>
    <gazebo_ros gazebo_media_path="${prefix}"
                gazebo_model_path="${prefix}/models"/>
  </export>

</package>
